--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Adeline Shiyi</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/CSS" href="CSS/style.css">
 </head>
 <body>
 	<h1>Adeline Shiyi's Portfolio</h1>
