--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,12 +9,12 @@
 	<p>Making Someday Today</p>
 	<!-- <img src="css/IMG_6524.JPG"> -->
 	<body background="css/IMG_6524.JPG">
-	<p>This is the creative and production portfolio of Adeline Shiyi. I am experienced in the production of: </p>
+	<p>This is the creative and production portfolio of Adeline Shiyi. My experience includes: </p>
 	<ul>
-	<li> Print Materials</li>
+	<li> Print Production</li>
+	<li> Print + Web Design </li>
 	<li> Front-end Web Development</li>
 	<li> Social Media Marketing</li>
-	<li> Web Campaigns </li>
 	<li> Event Planning </li>
 	</ul>
 	<p>Contact me at <a href="mailto:adelinesyeo@gmail.com?Subject=Project%20Inquiry" target="_top">adelineshiyi@gmail.com</a>
