--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -4,10 +4,60 @@
 	<title>Adeline Shiyi</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
+<div class="wrapper">
+
+<section id="one">
+	<h1>Adeline Shiyi</h1>
+	<h3>Creative Portfolio</h3>
+</header>
+<nav>
+	<a href="/mystory">MY STORY</a> |
+	<a href="/portfolio">PORTFOLIO</a> |
+	<a href="/blog">BLOG</a> |
+	<a href="/contact">CONTACT</a> |
+</nav>
+</section>
+
+<section id="two">
+	<aside class="picture">
+	</aside>
+	<article class="description">
+		<h3>My Story</h3>
+		<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+	</article>
+</section>
+
+<section id="three">
+	<article class="description">
+		<h3>Portfolio</h3>
+		<p> lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+	</article>
+	<aside class="picture.border">
+	</aside>
+</section>
+
+<section id="four">
+	<article class="blogcta">
+		<h3>Visit the blog</h3>
+	</article>
+	<aside class="picture">
+	</aside>
+</section>
+
+<footer>
+	<article class="contactcta">
+	<p>Get in touch</p>
+	</article>
+</footer>
+
+</div>
+</body>
+<!--
 	<h1>Adeline Shiyi</h1>
 	<p>Making Someday Today</p>
-	<!-- <img src="css/IMG_6524.JPG"> -->
+	<img src="css/IMG_6524.JPG">
 	<body background="css/IMG_6524.JPG">
 	<p>This is the creative and production portfolio of Adeline Shiyi. My experience includes: </p>
 	<ul>
@@ -19,5 +69,6 @@
 	</ul>
 	<p>Contact me at <a href="mailto:adelinesyeo@gmail.com?Subject=Project%20Inquiry" target="_top">adelineshiyi@gmail.com</a>
 	</p>
-</body>
+-->
+	
 </html>
