--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -22,7 +22,7 @@
 
 <section id="two">
 	<aside class="picture">
-	<img src="images/IMG_8478.JPG">
+	<img src="images/IMG_8478.JPG" width="40%" height="40%"/>
 	</aside>
 	<article class="description">
 		<h3>My Story</h3>
@@ -36,9 +36,9 @@
 		<p> lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
 	</article>
 	<aside class="picture.border">
-	<img src="images/IMG_7012.JPG">
+	<img src="images/IMG_7012.JPG" width="25%" height="25%"/>
 	<img src="images/IMG_1525.JPG">
-	<img src="images/IMG_1102.JPG">
+	<img src="images/IMG_1102.JPG" width="25%" height="25%"/>
 	</aside>
 </section>
 
@@ -47,9 +47,9 @@
 		<h3>Visit the blog</h3>
 	</article>
 	<aside class="picture">
-	<img src="images/IMG_3711.JPG">
-	<img src="images/IMG_0789.JPG">
-	<img src="images/IMG_0135.JPG">
+	<img src="images/IMG_3711.JPG" width="25%" height="25%"/>
+	<img src="images/IMG_0789.JPG" width="25%" height="25%"/>
+	<img src="images/IMG_0135.JPG" width="33%" height="33%"/>
 	</aside>
 </section>
 
