--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -12,7 +12,7 @@
 	<h1>Adeline Shiyi</h1>
 	<h3>Creative Portfolio</h3>
 </header>
-<nav>
+<nav align="center">
 	<a href="/mystory">MY STORY</a> |
 	<a href="/portfolio">PORTFOLIO</a> |
 	<a href="/blog">BLOG</a> |
@@ -20,7 +20,7 @@
 </nav>
 </section>
 
-<section id="two_column" class="clearfix">
+<section id="two_column" class="clearfix" align:"center">
 	<aside id="left" class="picture">
 	<img src="images/IMG_8478.JPG" width="65%" height="65%" align="right"/>
 	</aside>
@@ -33,29 +33,33 @@
 <section id="three">
 	<article class="description">
 		<h3>Portfolio</h3>
-		<p> lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+		<p id="portfolio"> lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
 	</article>
-	<aside class="picture.border">
-	<img src="images/IMG_7012.JPG" width="25%" height="25%"/>
-	<img src="images/IMG_1525.JPG">
-	<img src="images/IMG_1102.JPG" width="25%" height="25%"/>
+	<div align="center">
+	<aside>
+	<img class="portimage" src="images/IMG_7012.JPG" width="25%" height="25%"/>
+	<img class="portimage" src="images/IMG_1525.JPG" width="25%" height="25%"/>
+	<img class="portimage" src="images/IMG_1102.JPG" width="25%" height="25%"/>
 	</aside>
+	</div>
 </section>
 
 <section id="four">
 	<article class="blogcta">
 		<h3>Visit the blog</h3>
 	</article>
+	<div align="center">
 	<aside class="picture">
 	<img src="images/IMG_3711.JPG" width="25%" height="25%"/>
 	<img src="images/IMG_0789.JPG" width="25%" height="25%"/>
 	<img src="images/IMG_0135.JPG" width="33%" height="33%"/>
 	</aside>
+	</div>
 </section>
 
 <footer>
 	<article class="contactcta">
-	<p>Get in touch</p>
+	<h4>Get in touch</h4>
 	</article>
 </footer>
 
